# FX_SUMMARY

./: README.md  main.py  pyproject.toml  requirements.txt  run.sh  start.sh  test.sh
app/: main.py
app/data/: sample_fx.json
app/routes/: health.py  summary.py
app/services/: calculations.py  franksher_api.py
app/utils/: cache.py
tests/: test_calculations.py  test_franksher_api.py  test_health.py  test_summary.py
